ecmascript/parser/tests/typescript-errors/class/duplicated-modifiers/input.ts.stderr
error: 'readonly' modifier already seen.
 --> $DIR/tests/typescript-errors/class/duplicated-modifiers/input.ts:2:12
  |
2 |   readonly readonly size = 0;
  |            ^^^^^^^^

error: 'abstract' modifier already seen.
 --> $DIR/tests/typescript-errors/class/duplicated-modifiers/input.ts:3:12
  |
3 |   abstract abstract t() {}
  |            ^^^^^^^^

error: 'override' modifier already seen.
 --> $DIR/tests/typescript-errors/class/duplicated-modifiers/input.ts:4:12
  |
4 |   override override e() {}
  |            ^^^^^^^^

