ecmascript/parser/tests/typescript-errors/class/duplicated-modifiers/input.ts
class C extends B {
  readonly readonly size = 0;
  abstract abstract t() {}
  override override e() {}
}
